--- a/games/launcher/game/index.html
+++ b/games/launcher/game/index.html
@@ -1,34 +1,58 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Launcher</title>
+  <title>Launcher</title>
 
-    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-    <script src="launcher.js"></script>
+  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+  <script src="launcher.js"></script>
 
-    <style>
-        html,
-        body {
-            margin: 0;
-        }
-    </style>
+  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <h1>Available games</h1>
-    <ul id="games">
-    </ul>
 
-    <script>
-        var path = './';
-        var fs = require('fs');
+  <div id="header">
+    <h1>SELECT A GAME</h1>
+  </div>
+  <div id="main_container">
+    <div id="list_container">
+      <ul id="games">
+      </ul>
+    </div>
+    <div id="game_container">
+      <div id="game_info">
+        <div id="title">
+          Pong
+        </div>
+        <div id="screenshot">
 
-        fs.watch(path, function() {
-            if (location) {
-                location.reload();
-            }
-        });
-    </script>
+        </div>
+        <div id="description">
+          <p>
+            <i class="fa fa-users"> 2 players</i>
+          </p>
+          This is a game called Pong and it can be played. This is a game called Pong and it can be played. This is a game called Pong and it can be played.
+        </div>
+      </div>
+    </div>
+    <div id="footer">
+      &nbsp;
+    </div>
+  </div>
+
+
+
+  <script>
+  var path = './';
+  var fs = require('fs');
+
+  fs.watch(path, function() {
+    if (location) {
+      location.reload();
+    }
+  });
+  </script>
 </body>
 
 </html>
