--- a/games/launcher/game/index.html
+++ b/games/launcher/game/index.html
@@ -1,58 +1,52 @@
 <!DOCTYPE html>
 
 <head>
-  <title>Launcher</title>
+    <title>Launcher</title>
 
-  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-  <script src="launcher.js"></script>
+    <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="launcher.js"></script>
 
-  <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
 
-  <div id="header">
-    <h1>SELECT A GAME</h1>
-  </div>
-  <div id="main_container">
-    <div id="list_container">
-      <ul id="games">
-      </ul>
+    <div id="header">
+        <h1>SELECT A GAME</h1>
     </div>
-    <div id="game_container">
-      <div id="game_info">
-        <div id="title">
-          Pong
+    <div id="main_container">
+        <div id="list_container">
+            <ul id="games">
+            </ul>
         </div>
-        <div id="screenshot">
-
+        <div id="game_container">
+            <div id="game_info">
+                <div id="title"></div>
+                <div id="screenshot"></div>
+                <div id="description">
+                    <p>
+                        <i class="fa fa-users" id="players"></i>
+                    </p>
+                    <div id="desc-text"></div>
+                </div>
+            </div>
         </div>
-        <div id="description">
-          <p>
-            <i class="fa fa-users"> 2 players</i>
-          </p>
-          This is a game called Pong and it can be played. This is a game called Pong and it can be played. This is a game called Pong and it can be played.
+        <div id="footer">
+            &nbsp;
         </div>
-      </div>
     </div>
-    <div id="footer">
-      &nbsp;
-    </div>
-  </div>
 
+    <script>
+        var path = './';
+        var fs = require('fs');
 
-
-  <script>
-  var path = './';
-  var fs = require('fs');
-
-  fs.watch(path, function() {
-    if (location) {
-      location.reload();
-    }
-  });
-  </script>
+        fs.watch(path, function() {
+            if (location) {
+                location.reload();
+            }
+        });
+    </script>
 </body>
 
 </html>
