Launcher now tries to display game screenshots
The screenshot images should be of size 640x360.

The launcher looks for them in; "http://localhost/img/" + gameName + ".png" where
the backend is to serve them up.

--- a/games/launcher/game/index.html
+++ b/games/launcher/game/index.html
@@ -23,7 +23,9 @@
         <div id="game_container">
             <div id="game_info">
                 <div id="title"></div>
-                <div id="screenshot"></div>
+                <div id="screenshot">
+                    <img id="screenshot-src" />
+                </div>
                 <div id="description">
                     <p>
                         <i class="fa fa-users" id="players"></i>
